# Azrath

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml
examples/: router.rs
src/: config.rs  error.rs  executor.rs  http.rs  lib.rs  net.rs  server.rs
